# Kalc

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Readme.md  buildKolibriLib.sh
KolibriOS-Cpp-Lib/: CMakeLists.txt
KolibriOS-Cpp-Lib/include/kolibriLib/window/: window.hpp
cmake/: CMakeKOS32gcc.cmake
src/: UI.hpp  configuration.hpp  fraction.cpp  fraction.hpp  globals.hpp  main.cpp  math.hpp  parser.hpp
tinyexpr/: CMakeLists.txt
